syntax = "proto3";

option go_package = "proto/followings";
import "google/protobuf/timestamp.proto";

service FollowerService {
  rpc GetFollowings(GetFollowRequest) returns (GetFollowResponse) {}
  rpc CreateFollow(Follower) returns (Follower){}
  rpc DeleteFollow(DeleteFollowRequest) returns (Emptyy){}
  rpc GetAllRecommendedFollowings(GetFollowRequest) returns (GetFollowResponse){}
}

message People {
  int64 Id = 1;
  int64 UserId = 2;
  string Name = 3;
  string Surname = 4;
  string Email = 5;
  string Profile_pic = 6;
  string Biography = 7;
  string Motto = 8;
  double Latitude = 9;
  double Longitude = 10;
}

message GetFollowRequest {
  int32 id = 1;
}

message GetFollowResponse{
    repeated People people = 1;
}


message Follower{
  int32 Id = 1;
  int32 FollowerId = 2;
  int32 FollowedId = 3;
  Notification Notification = 4;
}

message Notification{
  string Content = 1;
  google.protobuf.Timestamp TimeOfArrival = 2;
  bool Read = 3;
}

message DeleteFollowRequest{
  int32 followerId = 1;
  int32 followedId = 2;
}

message Emptyy{

}